--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "homepage": "https://adasoft.com.ar",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
-    "@mui/material": "^5.15.0",
+    "@mui/material": "^5.15.6",
+    "@mui/styles": "^5.15.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
