--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.6",
     "@mui/styles": "^5.15.6",
@@ -18,8 +19,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.5.3",
     "react-lazyload": "^3.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
