--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://adasoft.com.ar",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.0",
@@ -17,6 +17,7 @@
     "emailjs-com": "^3.2.0",
     "gh-pages": "^6.1.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.5.3",
