--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-lazyload": "^3.2.0",
     "react-loader-spinner": "^6.1.6",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
