--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.5.3",
     "react-lazyload": "^3.2.0",
     "react-loader-spinner": "^6.1.6",
