--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.6",
     "@mui/styles": "^5.15.6",
@@ -25,7 +24,9 @@
     "react-lazyload": "^3.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-share": "^5.2.1",
     "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
